--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <circle cx="250" cy="145" r="125" fill="#FFFFFF" />
                     </clipPath>
                 </defs>
-                <image width="500" height="350" xlink:href="./images/vik1.jpg" clip-path="url(#myCircle)" />
+                <image width="500" height="350" xlink:href="vik1.jpg" clip-path="url(#myCircle)" />
             </svg>
         </div>
         <p class="div3">
